--- a/v2/manifest.json
+++ b/v2/manifest.json
@@ -1,18 +1,18 @@
 {
 	"name": "PassMe",
-	"version": "0.1",
+	"version": "0.2",
 	"description": "ETH Password Manager",
-	"permissions": ["declarativeContent"],
+	"permissions": ["declarativeContent", "storage", "activeTab"],
 	"background": {
 		"scripts": ["background.js"],
 		"persistent": false
 	},
 	
-	"browser_action": {
+	"page_action": {
 		"default_icon": {
 			"32": "icons/lock32.png"
 		},
-		"default_popup": "popup.html"
+		"default_popup": "index.html"
 	},
 	"manifest_version": 2
 }
