--- a/v2/manifest.json
+++ b/v2/manifest.json
@@ -8,11 +8,12 @@
 		"persistent": false
 	},
 
-	"page_action":{
+	"browser_action":{
 		"default_icon": {
 			"32": "icons/lock32.png"
 		},
 		"default_popup": "popup.html"
 	},
+	
 	"manifest_version": 2
 }
